tests/A2/reject/badIf.ul
void main(){
    char c;
    c = 'h';

    if(c){
        return;
    }
}